feat(api): complete UserResource CRUD with validation and comprehensive exception mapping